crates/monty/tests/heap_reader_compile_fail_cases/smuggle_heap_read.stderr
error[E0107]: struct takes 0 generic arguments but 1 generic argument was supplied
   --> crates/monty/src/../tests/heap_reader_compile_fail_cases/cases.rs:88:50
    |
 88 | fn smuggle_heap_read(list_id: HeapId, heap: &mut Heap<impl ResourceTracker>) {
    |                                                  ^^^^---------------------- help: remove the unnecessary generics
    |                                                  |
    |                                                  expected 0 generic arguments
    |
note: struct defined here, with 0 generic parameters
   --> crates/monty/src/heap.rs:924:19
    |
924 | pub(crate) struct Heap {
    |                   ^^^^
error[E0277]: the trait bound `(): resource::ResourceTracker` is not satisfied
   --> crates/monty/src/../tests/heap_reader_compile_fail_cases/cases.rs:90:28
    |
 90 |     HeapReader::with(heap, &mut (), |heap, ()| {
    |     ----------------       ^^^^^^^ the trait `resource::ResourceTracker` is not implemented for `()`
    |     |
    |     required by a bound introduced by this call
    |
help: the following other types implement trait `resource::ResourceTracker`
   --> crates/monty/src/resource.rs:340:1
    |
340 | impl ResourceTracker for NoLimitTracker {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `NoLimitTracker`
...
566 | impl ResourceTracker for LimitedTracker {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `LimitedTracker`
note: required by a bound in `heap::HeapReader::<'_, T>::with`
   --> crates/monty/src/heap.rs:114:9
    |
114 | impl<T: ResourceTracker> HeapReader<'_, T> {
    |         ^^^^^^^^^^^^^^^ required by this bound in `HeapReader::<'_, T>::with`
...
129 |     pub fn with<R, D: ?Sized>(
    |            ---- required by a bound in this associated function
Some errors have detailed explanations: E0107, E0277.
For more information about an error, try `rustc --explain E0107`.
